* Note: Implied Consent -
  If you send in a code patch or fix of one type or another you consent
  to have your name and email address listed here unless you explicitly
  note otherwise.  Whether your name & email is actually listed depends
  on how extensive the change.  (If it's a minor code, document change,
  or spelling correction your name will probably not be listed.)

****************************   Release 1.1 ******************************
pam-script 1.1.0
	* sources put under the GNU autotools: automake,libtool,autoconf.
	* test whether the script exists and is executable.
	* added the pam.conf configure option - onerr=(success|fail)
	  to set the default behavior when the script test fails.
	* sets several PAM_* environment variables and passes them to
	  the scripts.
	* added the pam.conf configure option - dir=/some/path/ to specify
	  an alternative directory where to look for the scripts.
	* added an example and man page

pam-script 1.0.0
Mar 01, 2005			Jeroen Nijhof <jnijhof@nijhofnet.nl>
	* Written by Jeroen Nijhof